--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,6 +1,12 @@
 [user]
+{{- if eq .chezmoi.hostname "rodgers-PC" }}
 	name = Rodgers Ouma
 	email = mc_alila@outlook.com
+{{- end }}
+{{- if eq .chezmoi.hostname "rodgers-TFL" }}
+	name = Rodgers Ouma
+	email = rodgers.ouma@twiga.com
+{{- end }}
 [color]
 	ui = auto
 [push]
