Update osRelease.idLike to osRelease.id

--- a/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
@@ -1,6 +1,6 @@
 {{- if eq .chezmoi.os "linux" -}}
 #!/bin/sh
-{{- if eq .chezmoi.osRelease.idLike "debian" -}}
+{{- if eq .chezmoi.osRelease.id "debian" -}}
 sudo apt update -y
 sudo apt full-upgrade -y
 
