More fedora updates

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -3,6 +3,10 @@
 	name = Rodgers Ouma
 	email = mc_alila@outlook.com
 {{- end }}
+{{- if eq .chezmoi.hostname "fedora" }}
+	name = Rodgers Ouma
+	email = mc_alila@outlook.com
+{{- end }}
 {{- if eq .chezmoi.hostname "rodgers-TFL" }}
 	name = Rodgers Ouma
 	email = rodgers.ouma@twiga.com
