Update .gitconfig with url changes for github remote

--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -41,7 +41,7 @@ alias activate.='source env/bin/activate'
 #utilities
 alias ngrok='~/ngrok/ngrok'
 alias docker='podman'
-alias ch='chezmoi'
+alias cz='chezmoi'
 
 {{- if eq .chezmoi.hostname "rodgers-TFL" }}
 
