--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -19,3 +19,5 @@
 	excludesfile = ~/.gitignore_global
 [pull]
 	rebase = merges
+[url "ssh://git@github.com/ardenn/"]
+	insteadOf = https://github.com/ardenn/
