Update git init branch name

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -19,5 +19,7 @@
 	excludesfile = ~/.gitignore_global
 [pull]
 	rebase = merges
+[init]
+	defaultBranch = main
 [url "ssh://git@github.com/ardenn/"]
 	insteadOf = https://github.com/ardenn/
