--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -23,3 +23,5 @@
 	defaultBranch = main
 [url "ssh://git@github.com/ardenn/"]
 	insteadOf = https://github.com/ardenn/
+[url "ssh://git@bitbucket.org/twigatechteam/"]
+        insteadOf = https://bitbucket.org/twigatechteam/
