Add brave and vscode install for fedora

--- a/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
@@ -50,13 +50,22 @@ sudo apt install brave-browser
 
 {{if eq .chezmoi.osRelease.id "fedora" -}}
 # Update system
-sudo dnf update -y
+sudo dnf upgrade -y
 set -eufo pipefail
 
 # Enable 3rd party repositories
-sudo dnf install fedora-workstation-repositories
+sudo dnf install fedora-workstation-repositories dnf-plugins-core
 sudo dnf config-manager --set-enabled google-chrome
 sudo dnf config-manager --add-repo https://repo.ivpn.net/stable/fedora/generic/ivpn.repo
+
+# Add brave repo
+sudo dnf config-manager --add-repo https://brave-browser-rpm-release.s3.brave.com/x86_64/
+sudo rpm --import https://brave-browser-rpm-release.s3.brave.com/brave-core.asc
+
+# Add vscode repo
+sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
+sudo sh -c 'echo -e "[code]\nname=Visual Studio Code\nbaseurl=https://packages.microsoft.com/yumrepos/vscode\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/vscode.repo'
+sudo dnf check-update
 
 # Install packages
 packages=(
@@ -74,6 +83,8 @@ packages=(
     gnome-tweaks
     ivpn-ui
     ivpn
+    brave-browser
+    code
 )
 
 sudo dnf install -y ${packages[@]}
