Update git config

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -7,6 +7,10 @@
 	name = Rodgers Ouma
 	email = mc_alila@outlook.com
 {{- end }}
+{{- if eq .chezmoi.hostname "sycamore" }}
+	name = Rodgers Ouma
+	email = mc_alila@outlook.com
+{{- end }}
 {{- if eq .chezmoi.hostname "rodgers-TFL" }}
 	name = Rodgers Ouma
 	email = rodgers.ouma@twiga.com
