--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -27,5 +27,6 @@
 	defaultBranch = main
 [url "ssh://git@github.com/ardenn/"]
 	insteadOf = https://github.com/ardenn/
+	insteadOf = https://ardenn@github.com/ardenn/
 [url "ssh://git@bitbucket.org/twigatechteam/"]
         insteadOf = https://bitbucket.org/twigatechteam/
