Add more flatpaks

--- a/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
@@ -94,7 +94,8 @@ flatpaks=(
     com.mattjakeman.ExtensionManager
     org.telegram.desktop
     de.haeckerfelix.Fragments
-    com.lakoliu.Furtherance
+    com.github.marhkb.Pods
+    hu.irl.cameractrls
 )
 
 flatpak install flathub ${flatpaks[@]}
