Don't install tlp by default

--- a/.chezmoiscripts/run_once_after_9999-notes.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_9999-notes.sh.tmpl
@@ -9,4 +9,7 @@ echo "FastConnectable=true"
 echo "ReconnectAttempts=7"
 echo "ReconnectIntervals=1,2,4,8,16,32,64"
 
+echo "If on an Intel laptop install tlp and tlp-rdw from the package manager"
+echo "If on an AMD Laptop, check if you need to install power-profiles-daemon, it could already be installed"
+
 {{ end }}
