--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -34,18 +34,9 @@ alias stop='sudo systemctl stop'
 alias status='sudo systemctl status'
 alias reload='sudo systemctl reload'
 
-#venvs
-alias activate='source ../env/bin/activate'
-alias activate.='source env/bin/activate'
-
 #utilities
 alias docker='podman'
 alias cz='chezmoi'
-
-{{- if eq .chezmoi.hostname "rodgers-TFL" }}
-
-# twiga utilities
-alias twiga-start='start postgresql && start rabbitmq-server && start redis-server'
-alias test='nocorrect make test'
-alias gitme='git config user.name "Rodgers Ouma" && git config user.email "mc_alila@outlook.com"'
-{{- end }}
+alias code='code --ozone-platform-hint=auto'
+alias http='xh'
+alias pcloud='podman run --rm -ti -v ~/.config/pcloud:/root/.config/gcloud:z -p 8085:8085 --name gcloud-config gcr.io/google.com/cloudsdktool/google-cloud-cli:emulators gcloud'
