--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -39,5 +39,5 @@ alias docker='podman'
 alias cz='chezmoi'
 alias code='code --ozone-platform-hint=auto'
 alias http='xh'
-alias pcloud='podman run --rm -ti -v ~/.config/pcloud:/root/.config/gcloud:z -p 8085:8085 --name gcloud-config gcr.io/google.com/cloudsdktool/google-cloud-cli:emulators gcloud'
+alias pcloud='podman run --rm -ti -v ~/.config/namiri/pcloud:/root/.config/gcloud:z -p 8085:8085 --name gcloud-config gcr.io/google.com/cloudsdktool/google-cloud-cli:emulators gcloud'
 alias fw='sudo ~/tools/framework_tool --driver portio'
