resticprofile alias to config

--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -41,3 +41,4 @@ alias code='code --ozone-platform-hint=auto'
 alias http='xh'
 alias pcloud='podman run --rm -ti -v ~/.config/namiri/pcloud:/root/.config/gcloud:z -p 8085:8085 --name gcloud-config gcr.io/google.com/cloudsdktool/google-cloud-cli:emulators gcloud'
 alias fw='sudo ~/tools/framework_tool --driver portio'
+alias resticp='resticprofile --config ~/sycamore/restic/profiles.yaml'
