--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -35,9 +35,11 @@ alias status='sudo systemctl status'
 alias reload='sudo systemctl reload'
 
 #utilities
+# https://sw.kovidgoyal.net/kitty/kittens/ssh/
+alias ssh='kitten ssh'
 alias docker='podman'
 alias cz='chezmoi'
-alias code='code --ozone-platform-hint=auto'
+alias code='code --ozone-platform=wayland'
 alias http='xh'
 alias pcloud='podman run --rm -ti -v ~/.config/namiri/pcloud:/root/.config/gcloud:z -p 8085:8085 --name gcloud-config gcr.io/google.com/cloudsdktool/google-cloud-cli:emulators gcloud'
 alias fw='sudo ~/tools/framework_tool --driver portio'
