Add mission centre to packages

--- a/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
@@ -83,6 +83,7 @@ flatpaks=(
     com.github.marhkb.Pods
     hu.irl.cameractrls
     io.gitlab.news_flash.NewsFlash
+    io.missioncenter.MissionCenter
 )
 
 flatpak install flathub ${flatpaks[@]}
