Add packet to flatpaks

--- a/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
@@ -84,6 +84,7 @@ flatpaks=(
     hu.irl.cameractrls
     io.gitlab.news_flash.NewsFlash
     io.missioncenter.MissionCenter
+    io.github.nozwock.Packet
 )
 
 flatpak install flathub ${flatpaks[@]}
