--- a/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages-linux.sh.tmpl
@@ -85,6 +85,7 @@ flatpaks=(
     io.gitlab.news_flash.NewsFlash
     io.missioncenter.MissionCenter
     io.github.nozwock.Packet
+    cafe.avery.Delfin
 )
 
 flatpak install flathub ${flatpaks[@]}
